installer: drop jmods (notary rejects their unsigned natives); installed IDE exports games via --runtime-image
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>